# recipes

./: README.md  docker-compose.yml
.circleci/: config.yml
client/: Dockerfile  index.html  nginx.conf  package.json  webpack.config.dev.js  webpack.config.prod.js
client/src/: App.svelte  Auth.svelte  Header.svelte  Home.svelte  Login.svelte  Recipe.svelte  RecipeList.svelte  RecipePage.svelte  RecipeSummary.svelte  Submit.svelte  SubmitRecipe.svelte  api.js  main.js  store.js  utils.js
client/src/Home/: List.svelte  Submit.svelte
client/src/Recipe/: Form.svelte
database/: Dockerfile  schema.sql
server/: Cargo.toml  Dockerfile  Dockerfile.local  Rocket.toml  docker-compose.yml
server/src/: cors.rs  main.rs  s3.rs
serverless/: index.js  index.ts  package.json  serverless.yml  tsconfig.json
