[package]
name = "recipes"
version = "0.1.0"
authors = ["Elliot Davies <elliot.a.davies@gmail.com>"]
edition = "2018"

[dependencies]
postgres = "0.15"
rocket = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["postgres_pool", "json"]
